fix up laptop on mobile

--- a/src/sass/modules/hero.scss
+++ b/src/sass/modules/hero.scss
@@ -7,7 +7,11 @@
   &.not-homepage {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+
+    .laptop-breakout {
+      opacity: 0;
+      height: 200px;
+    }
 
     @media (min-width: 768px) {
       .copy {
